manifests/leader/diago-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: diago
  labels:
    app.kubernetes.io/name: diago
    app.kubernetes.io/part-of: diago
    app.kubernetes.io/component: leader
spec:
  replicas: 1
  serviceName: diago
  selector:
    matchLabels:
      app.kubernetes.io/name: diago
  template:
    metadata:
      labels:
        app.kubernetes.io/name: diago
        app.kubernetes.io/part-of: diago
        app.kubernetes.io/component: leader
    spec:
      serviceAccountName: diago-sa
      containers:
      - name: leader
        image: diago
        imagePullPolicy: Never
        volumeMounts:
        - name: diago-storage
          mountPath: "/storage"
      volumes:
        - name: diago-storage
          persistentVolumeClaim:
            claimName: diago-pvc
      terminationGracePeriodSeconds: 0
