manifests/leader/kratos-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.23.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: kratos
  name: kratos
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: kratos
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.23.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/intranet: "true"
        io.kompose.service: kratos
    spec:
      containers:
        - args:
            - serve
            - -c
            - /etc/config/kratos/kratos.yml
            - --dev
            - --watch-courier
          image: oryd/kratos:v0.6.3-alpha.1-sqlite
          name: kratos
          ports:
            - containerPort: 4433
            - containerPort: 4434
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/sqlite
              name: kratos-sqlite
            - mountPath: /etc/config/kratos
              name: kratos-claim1
      restartPolicy: Always
      volumes:
        - name: kratos-sqlite
          persistentVolumeClaim:
            claimName: kratos-sqlite
        - name: kratos-claim1
          persistentVolumeClaim:
            claimName: kratos-claim1
status: {}
