manifests/leader/kratos-migrate-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.23.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.network/intranet: "true"
    io.kompose.service: kratos-migrate
  name: kratos-migrate
spec:
  containers:
    - args:
        - -c
        - /etc/config/kratos/kratos.yml
        - migrate
        - sql
        - -e
        - --yes
      image: oryd/kratos:v0.6.3-alpha.1-sqlite
      name: kratos-migrate
      resources: {}
      volumeMounts:
        - mountPath: /var/lib/sqlite
          name: kratos-sqlite
        - mountPath: /etc/config/kratos
          name: kratos-migrate-claim1
  restartPolicy: OnFailure
  volumes:
    - name: kratos-sqlite
      persistentVolumeClaim:
        claimName: kratos-sqlite
    - name: kratos-migrate-claim1
      persistentVolumeClaim:
        claimName: kratos-migrate-claim1
status: {}
