manifests/leader/mailslurper-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.23.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: mailslurper
  name: mailslurper
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mailslurper
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.23.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/intranet: "true"
        io.kompose.service: mailslurper
    spec:
      containers:
        - image: oryd/mailslurper:latest-smtps
          name: mailslurper
          ports:
            - containerPort: 4436
            - containerPort: 4437
          resources: {}
      restartPolicy: Always
status: {}
