manifests/leader/diago-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: diago
  labels:
    app.kubernetes.io/name: diago
    app.kubernetes.io/part-of: diago
    app.kubernetes.io/component: leader
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: /metrics
    prometheus.io/port: "2112"
spec:
  selector:
    app.kubernetes.io/name: diago
  type: ClusterIP
  ports:
  - name: api
    protocol: TCP
    port: 80
    targetPort: 80
  - name: prom
    protocol: TCP
    port: 2112
    targetPort: 2112
  - name: grpc
    protocol: TCP
    port: 5000
    targetPort: 5000
  - name: mongod
    protocol: TCP
    port: 27017
    targetPort: 27017
  - name: aggregator
    protocol: TCP
    port: 6000
    targetPort: 6000
