manifests/leader/kratos-selfservice-ui-node-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.23.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: kratos-selfservice-ui-node
  name: kratos-selfservice-ui-node
spec:
  ports:
    - name: "4455"
      port: 4455
      targetPort: 4455
  selector:
    io.kompose.service: kratos-selfservice-ui-node
status:
  loadBalancer: {}
