manifests/leader/kratos-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.23.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: kratos
  name: kratos
spec:
  type: NodePort
  ports:
    - name: "4433"
      port: 4433
      targetPort: 4433
    - name: "4434"
      port: 4434
      targetPort: 4434
  selector:
    io.kompose.service: kratos
status:
  loadBalancer: {}
